# training-rust

./: .env.local  .gitignore  Cargo.toml  Makefile.toml  README.md  db.sqlite
.sqlx/: query-4e4a002bfdc8203a89f201421087c09e49b41dd2df9e01da3bef1b1350a43773.json  query-eda3a8c7f7a4c6a0141b3620fd95b4873553c6b91088d9be6eca536eb874d649.json
migrations/: 20250724014851_users.down.sql  20250724014851_users.up.sql
src/: main.rs
src/db/: db.rs  mod.rs  redis.rs
src/db/repositories/: user.rs
src/dtos/: auth.rs  users.rs
src/extractors/: session.rs
src/handlers/: auth.rs  users.rs
src/middlewares/: logging.rs
src/models/: user.rs
src/routes/: auth.rs  users.rs
src/state/: app.rs
src/utils/: password.rs
