[package]
name = "training-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
cuid2 = { version = "0.1.4" }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "macros",
    "chrono",
] }
dotenvy = "0.15"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
